--- a/reg_login.html
+++ b/reg_login.html
@@ -6,31 +6,38 @@
 		<link rel="stylesheet" href="reg_login.css">
 	</head>
 	<body>
+		<h1>Prello</h1>
 		<div id="register" class="main">
-			<h1>Register</h1>
 			<form action="" method="post" id="reg_from">
-				<div class="container">
-					<label><strong>email</strong></label>
+				<div class="toggle_container">
+					<button class="register">register</button>
+					<button class="login inactive">login</button>
+				</div>
+				<div class="form_container">
+					<label><p>email</p></label>
 					<input type="email" placeholder="enter email" id="email_reg" required>
-					<label><strong>password</strong></label>
+					<label><p>password</p></label>
 					<input type="password" placeholder="enter password" id="password_reg" required>
-					<label><strong>confirm password</strong></label>
-					<input type="password" placeholder="confirm password" id="confirm_password" required>
+					<label><p>confirm password</p></label>
+					<input type="password" placeholder="re-enter password" id="confirm_password" required>
 					<button type="submit">submit</button>
 				</div>
 			</form>
 		</div>
 
 		<div id="login" class="main">
-			<h1>Log In</h1>
 			<form action="" method="post" id="login_form">
-				<div class="container">
-					<label><strong>email</strong></label>
+				<div class="toggle_container">
+					<button class="register inactive">register</button>
+					<button class="login">login</button>
+				</div>
+				<div class="form_container">
+					<label><p>email</p></label>
 					<input type="email" placeholder="enter email" id="email_login" required>
-					<label><strong>password</strong></label>
+					<label><p>password</p></label>
 					<input type="password" placeholder="enter password" id="password_login" required>
 					<button type="submit">login</button>
-					<input type="checkbox" checked>Remember me
+					<input type="checkbox" checked>remember me
 				</div>
 			</form>
 	</body>
