final touches for now. PS the only reason I am finishing this late is because I got incredibly sick yesterday and spent literally all day today sleeping (woohoo).

--- a/board.html
+++ b/board.html
@@ -3,9 +3,490 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Prello</title>
+		<link rel="stylesheet" href="board.css">
 	</head>
 	<body>
+		<nav>
+			<button class="dropdown_button" onclick="toggleDropDown()">
+				<p>Boards <span class="down_arrow" id="down_arrow">&#9660</span></p>
+			</button>
+			<h1>Prello</h1>
+			<button class="options_button" onclick="openSideMenu()">
+				<p><span class="left_arrow">&#9664</span> Options</p>
+			</button>
+		</nav>
 
+		<div class="side_menu" id="side_menu">
+			<a href="#" class="close_button" onclick="closeSideMenu()">&times;</a>
+			<a href="#">Option</a>
+		  	<a href="#">Option 2</a>
+		  	<a href="#">Option 3</a>
+		  	<a href="#">Option 4</a>
+		</div>
+
+		<div class="drop_down" id="drop_down">
+			<ul>
+				<li>Board Name</li>
+				<li>Board Name</li>
+				<li>Board Name</li>
+				<li>Board Name</li>
+				<li>Board Name</li>
+				<li>Board Name</li>
+				<li>Board Name</li>
+			</ul>
+		</div>
+
+
+		<h2>Board Name</h2>
+		<ul id="lol">
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p class="category">Category Name</p>
+				<ul class="card_list">
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words</p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+					<li>
+						<ul class="features">
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<p class="card_title">Card Title words words words/p>
+					</li>
+				</ul>
+			</li>
+		</ul>
+		<div class="card">
+			<h3>Card Name</h3>
+			<ul class="features">
+				<li>label 1</li>
+				<li>label 2</li>
+				<li>label 3</li>
+				<li>label 4</li>
+				<li id="add_button">+</li>
+			</ul>
+			<p class="subtitle">Description</p>
+			<a href="#" class="edit_button">Edit</a>
+			<p class="description">This is the description. It is very informative. It tells you everything there is to konw about whatever it is that this card is about (see card title above). Wow. So useful.</p>
+			<h4>Leave a Comment</h4>
+			<form action="">
+				<textarea placeholder="Write a comment..."></textarea>
+				<button type="submit">Save</button>
+			</form>
+			<a href="#" class="cancel_button">Cancel</a>
+		</div>
 	</body>
 
+
+<script>
+	function openSideMenu() {
+	    document.getElementById("side_menu").style.width = "250px";
+	}
+
+	function closeSideMenu() {
+	    document.getElementById("side_menu").style.width = "0";
+	}
+
+	function toggleDropDown() {
+		if ((document.getElementById("drop_down").style.height === "0px") || (document.getElementById("drop_down").style.height === "")) {
+	    	document.getElementById("drop_down").style.height = "300px";
+	    	document.getElementById("down_arrow").innerHTML = "&#x25b2";
+
+		} else {
+			document.getElementById("drop_down").style.height = "0px";
+			document.getElementById("down_arrow").innerHTML = "&#9660";
+		}
+	}
+
+</script>
 </html>
