--- a/boards.html
+++ b/boards.html
@@ -13,7 +13,7 @@
 			<li>Board 3</li>
 			<li>Board 4</li>
 			<button>
-				<img src="http://www.iconsdb.com/icons/preview/gray/plus-xxl.png"> </img>
+				<a href="#">+</a>
 			</button>
 		</ul>
 
