--- a/reg_login.html
+++ b/reg_login.html
@@ -6,20 +6,23 @@
 		<link rel="stylesheet" href="reg_login.css">
 	</head>
 	<body>
-		<h1>Prello</h1>
+		<nav>
+			<h1>Prello</h1>
+		</nav>
+
 		<div id="register" class="main">
-			<form action="" method="post" id="reg_from">
+			<form action="" method="post" id="register_form">
 				<div class="toggle_container">
 					<button class="register">register</button>
 					<button class="login inactive">login</button>
 				</div>
 				<div class="form_container">
 					<label><p>email</p></label>
-					<input type="email" placeholder="enter email" id="email_reg" required>
+					<input type="email" placeholder="enter email" id="reg_email" required>
 					<label><p>password</p></label>
-					<input type="password" placeholder="enter password" id="password_reg" required>
+					<input type="password" placeholder="enter password" id="reg_password" required>
 					<label><p>confirm password</p></label>
-					<input type="password" placeholder="re-enter password" id="confirm_password" required>
+					<input type="password" placeholder="re-enter password" id="reg_confirm" required>
 					<button type="submit">submit</button>
 				</div>
 			</form>
@@ -33,13 +36,13 @@
 				</div>
 				<div class="form_container">
 					<label><p>email</p></label>
-					<input type="email" placeholder="enter email" id="email_login" required>
+					<input type="email" placeholder="enter email" id="login_email" required>
 					<label><p>password</p></label>
-					<input type="password" placeholder="enter password" id="password_login" required>
+					<input type="password" placeholder="enter password" id="login_password" required>
 					<button type="submit">login</button>
 					<input type="checkbox" checked>remember me
 				</div>
 			</form>
 	</body>
-
+	<script src="reg_login.js"></script>
 </html>
