Started integrating data storage -- all dummy data read in through dom

--- a/board.html
+++ b/board.html
@@ -41,423 +41,11 @@
 		<div id="lol_container">
 			<ul id="lol">
 				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
-					<p class="category">Category Name</p>
-					<ul class="card_list">
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words</p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-						<li>
-							<ul class="features">
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-							<p class="card_title">Card Title words words words/p>
-						</li>
-					</ul>
-					<a href="#" class="add_card">Add new card...</a>
-				</li>
-				<li>
 					<a href="#" class="add_category">Add new category...</a>
 				</li>
 			</ul>
-		</div>	
+		</div>
+
 
 		<div id="modal">
 			<div class="modal_bg"></div>
@@ -488,3 +76,420 @@
 
 	<script src="board.js"></script>
 </html>
+
+
+<!-- <p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<p class="category">Category Name</p>
+<ul class="card_list">
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words</p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+	<li>
+		<ul class="features">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<p class="card_title">Card Title words words words/p>
+	</li>
+</ul>
+<a href="#" class="add_card">Add new card...</a>
+</li>
+<li>
+<a href="#" class="add_category">Add new category...</a>
+</li> -->
